[FIX] Overflow
The overlay can not be scrolled so the overflow property should be
set to hidden.

--- a/css/presentation.css
+++ b/css/presentation.css
@@ -18,4 +18,5 @@
     background-color: white;
     width: 500px;
     height: 300px;
+    overflow: hidden;
 }
